fix: Class Departamento // arreglado metodo OrganizadorReu